2005-02-04  Harry Lu  <harry.lu@sun.com>

	Add a11y name for attachment button and bars.

	* gui/dialogs/cal-attachment-bar.c: (cal_attachment_bar_new):
	* gui/dialogs/comp-editor.c: (setup_widgets):

2005-02-04  Rodney Dawes  <dobey@novell.com>

	* gui/dialogs/comp-editor.[ch]: Add a string to CompEditorPrivate to
	store the name of the help section we need to refer for derived dialogs
	(response_cb): Handle the GTK_RESPONSE_HELP response and show help
	(setup_widgets): Add a button to the dialog for Help
	(comp_editor_init): Default to the "usage-calendar" help section
	(comp_editor_finalize): Free the help_section variable
	(comp_editor_show_help): Add a new method to actually open the help
	(comp_editor_set_help_section): Add a method for derivatives to set the
	help section they want to open

	* gui/dialogs/event-editor.c (event_editor_init): Set the help section
	we want to open for the event editor to "usage-calendar-apts"

	* gui/dialogs/task-editor.c (task_editor_init): Set the help section
	we want to open for the event editor to "usage-calendar-todo"
	
2005-02-04  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-tasks.c (update_view): clear the component preview when we
	update the view.

	* gui/e-cal-model.c (set_instance_times): use the correct timezone.
	Removed commented code.

2005-02-04  Rodrigo Moya <rodrigo@novell.com>

	Fixes #71265

	* gui/e-week-view.c (e_week_view_remove_event_cb):
	* gui/e-day-view.c (e_day_view_remove_event_cb): if we remove the
	event we were editing, update internal pointers.

2005-02-04  Vivek Jain <jvivek@novell.com>
	
	* calendar-errors.xml.h
	* calendar-errors.xml : changed the warning message string for
	server-version

2005-02-04  Yong Sun <yong.sun@sun.com>

	Fix for #56901

	* gui/print.c: (bound_text): When the width>maxwidth, the 
	pointer 'p' should also be backwarded, same as 'o'.

2005-02-03  Rodney Dawes  <dobey@novell.com>

	* calendar-errors.xml.h: Update to include new strings from the